                             Locale::KeyedText
                                  Changes
---------------------------------------------------------------------------

2016-08-xx

    * Locale::KeyedText version 1.74.0 for Perl 5 is released on CPAN as
    Locale-KeyedText-1.74.0.tar.gz.

    * The first main purpose of this release is making Locale::KeyedText
    substantially lighter in its external dependencies, so that it can be
    installed and used with a relative minimum of overhead.  This release
    is also about bringing other aspects of modernity to this distribution.

    * This distribution has excised its direct external dependencies on the
    modules "only" and "version".

    * Removed the Perl shebang line "#!perl" from every Perl file with one.

    * The second main purpose of this release is bringing back the thorough
    (such as it was) test suite that came with Locale::KeyedText up through
    release 1.060002 and was entirely purged with release 1.06_3.

    * Increased the direct external dependency on Test::More to version
    0.92, which is the version bundled with Perl 5.10.1; updated the test
    suite to use done_testing(), that v0.88+ has, rather than plan().

    * Locale::KeyedText is now licensed under the terms of the GNU Lesser
    General Public License (LGPL) version 3 or later, rather than version
    2.1+ of the same license.  The text of the updated license is now in
    the 2 files LICENSE/LGPL and LICENSE/GPL rather than 1 file "LGPL".

    * Update AUTHOR emails from perl@ to darren@.

    * Modernize the headings of the distribution files {Changes, README,
    TODO} and tweak the INSTALL file.  Modernize the content of the README
    file on Locale::KeyedText version control or other resources are.

    * Incremented all copyright year range-ends to 2016 (from 2006).

2006-05-01

    * Locale-KeyedText Release 1.73.0/1.073000 (SVN r1261).

    * New code file versions are: KeyedText.pm 1.73.0 and en.pm 1.0.1.
